2.3.2 Compatibility with JDK 9 and use MethodHandle for Interceptor calls.